# aws

./: .gitignore  .pre-commit-config.yaml  Brewfile  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  package-lock.json  restart-all-launchers.sh  restart-all.sh  shutdown-all.sh  start.sh  stop.sh  ubuntu-setup.sh
.cargo/: config.toml  zig-cc-wrapper.sh
.claude/: settings.json
.claude/agents/: code-quality-checker.md
.github/workflows/: rust.yml
RAG/: .gitignore  Makefile  README.md  __init__.py  agent.py  deploy-rag.yaml  requirements.txt
ansible/: restart-all-launchers.yaml  restart-all.yaml  shutdown-all.yaml
backend/: Cargo.toml  Makefile  README.md  config.backend2.toml  config.backend3.toml  config.ci.toml  config.toml  deploy-backend.yaml  deploy.sh  qemu.md
backend/src/: config.rs  main.rs  qemu.rs  register.rs  vm_db.rs  (+4 more)
cli/: Cargo.toml  Makefile  README.md
docs/: qemu.md
frontend/: .env.development  Makefile  README.md  deploy-frontend.yaml  deploy.sh  package-lock.json  package.json
inventory/: nodes.yaml
node-ssh/: Makefile  README.md  config.js  deploy-node-ssh.yaml  package-lock.json  package.json  server.js
proxy/: Cargo.toml  Makefile  README.md  config.toml  deploy-proxy.yaml  deploy.sh
proxy/.claude/agents/: proxy-api-docs-writer.md
proxy/src/: config.rs  ip_lookup.rs  main.rs  proxy_service.rs  registry.rs
scripts/: host1-setup.sh  workers-setup.sh
src/: config.rs  main.rs  vm_db.rs  vm_launcher.rs  vm_service.rs
terraform_provider/: .gitignore  Makefile  README.md  go.mod  main.go  terraform.rc.example
(+24 files in other folders)
